--- a/_React-Complete-Guide-Udemy-Course/Practice-Quiz-App-starting-project/src/index.css
+++ b/_React-Complete-Guide-Udemy-Course/Practice-Quiz-App-starting-project/src/index.css
@@ -51,6 +51,8 @@ header h1 {
   background: linear-gradient(90deg, #e781fb 40%, #8e76fa 60%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
 }
 
 #last-try {
