--- a/_React-Complete-Guide-Udemy-Course/18 Practice Project - Food Order/12-finishing-touches/src/index.css
+++ b/_React-Complete-Guide-Udemy-Course/18 Practice Project - Food Order/12-finishing-touches/src/index.css
@@ -282,3 +282,34 @@ h1 {
     transform: translateY(0);
   }
 }
+
+/* Example CSS */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: scale(0.25);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+/* Example CSS */
+@keyframes growFont {
+  from {
+    font-size: 2rem;
+  }
+  to {
+    font-size: 1rem;
+  }
+}
+
+.fade-in {
+  animation: fadeIn 0.5s ease-in-out;
+
+}
+.growFont {
+  animation: growFont 0.5s ease-in-out;
+
+}
